# 4ksnake

./: CMakeLists.txt  LICENSE  README.md  game.cpp  main.cpp
include/: config.h  global.h
startup/: CMakeLists.txt  alloc.cpp  alloc.h  initterm.cpp  new.cpp  pch.h
